# IOPL_Project

./: .denoted.h.swp  .exrc  .gitignore  .parse_declaration.c.swp  .term.swp  C89.txt  CMakeLists.txt  Makefile  README  all.h  ast.c  ast.h  ast.hh  chonky.c  chonky_jr.c  chonky_jr.h  compile.c  context.c  denoted.c  denoted.h  denoted.hh  lexer.c  lexer.h  lexer.hh  location.c  location.h  main.c  makefile  map.c  map.h  parse.c  parse_declaration.c  parse_declaration.h  parse_expression.h  parse_statement.c  parse_statement.h  parse_translation_unit.c  parse_translation_unit.h  preprocessing.c  print.c  (+19 more)
backend/print/: print.h
code_generation/js/: transpile_to_js.c  transpile_to_js.h
frontend/lex/: lexer.hh
frontend/lex/automatas/: chonky.c  chonky.h  chonky_jr.c  chonky_jr.h
frontend/parse/: parse.h  parse_expression.c
frontend/semantics/: ast.c
frontend/semantics/identifiers/: denoted.c  denoted.h  denoted.hh  scope.hh
frontend/semantics/memory/: location.hh  semantics.c  type.c  type.h
lex/: chonky.c  chonky.h  chonky_jr.c  lexer.c  lexer.h  preprocessing.c  preprocessing.h  preprocessing.hh
misc/: all.h  gcc_arguments.c  gcc_arguments.h  gcc_string.c  gcc_string.h  map.c  map.h  print.c  print.h  queue.c  stack.h
misc/tests/: test3.c
parse/: parse.h  parse_declaration.c  parse_declaration.h  parse_expression.c  parse_expression.h  parse_statement.c  parse_statement.h  parse_translation_unit.c  parse_translation_unit.h
program/: gcc_arguments.c  gcc_arguments.h  program.c  program.h
semantics/: ast.c  ast.h  ast.hh  denoted.c  denoted.h  denoted.hh  gcc_error.c  gcc_error.h  gcc_error.hh  linkage.c  linkage.h  linkage.hh  location.c  location.h  program.c  program.h  program.hh  scope.c  scope.h  scope.hh  semantics.c  semantics.h  type.c  type.h  type.hh
src/: wonky.h
src/backend/js/: transpile_to_js.c  transpile_to_js.h
src/backend/print/: print.c  print.h
src/frontend/lex/: lexer.c  preprocessing.c  preprocessing.h  preprocessing.hh
src/frontend/parse/: parse.h  parse_declaration.c  parse_declaration.h  parse_expression.c  parse_expression.h  parse_statement.c  parse_statement.h  parse_translation_unit.c  parse_translation_unit.h
src/misc/: gcc_string.c  map.c
src/program/: gcc_arguments.c  gcc_arguments.h  gcc_arguments.hh  gcc_error.c  gcc_error.h  gcc_error.hh  program.c  program.h  program.hh
src/semantics/: ast.c  ast.h  ast.hh
src/semantics/identifiers/: denoted.c  denoted.h  denoted.hh  linkage.c  linkage.h  linkage.hh  scope.c  scope.h  scope.hh
src/semantics/memory/: location.c  location.h  location.hh  object.c  object.h  object.hh
src/semantics/value/: evaluation.c  evaluation.h  type.c  type.h  type.hh
tests/: test.c  test2.c  test3.c  test4.c  test5.c  testerror.c
